# noise-nugget-c-sdk

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  aic3105__reg__def_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_bc0718b08fb2015b8e59c47b2805f60c.html  dir_bc0718b08fb2015b8e59c47b2805f60c.js  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  index.js  menudata.js  midi__utils_8h.html  midi__utils_8h.js  midi__utils_8h__incl.dot  midi__utils_8h_source.html  navtreedata.js  navtreeindex0.js  noise__nugget_8h.html  noise__nugget_8h.js  noise__nugget_8h__incl.dot  noise__nugget_8h_source.html  noise_nugget-config.cmake  pgb1_8h.html  pgb1_8h.js  pgb1_8h__incl.dot  pgb1_8h_source.html  structLedColor.html  structLedColor.js  structclock__cfg.html  (+2 more)
.github/: FUNDING.yml
.github/workflows/: build.yml  docs.yml
docs/: Doxyfile
examples/: CMakeLists.txt
examples/basics/: CMakeLists.txt  basics.c
examples/basics/braids/: analog_oscillator.cc  braids_main.cc  braids_main.h  digital_oscillator.cc  digital_oscillator.h  dsp.h  envelope.h  excitation.h  macro_oscillator.cc  quantizer.h  resources.cc  settings.cc  settings.h  vco_jitter_source.h
examples/braids_pocket/: CMakeLists.txt  braids_pocket.c
examples/braids_pocket/braids/: analog_oscillator.h  braids_main.cc  braids_main.h  quantizer.cc  resources.h  rules.mk
examples/fixdsp_example/: CMakeLists.txt  main.cc
examples/midi_music_box/: CMakeLists.txt  Synth.hpp  encoder.hpp  gui.cpp  gui.hpp  midi.cpp  midi.hpp  midi_music_box.c  screen.cpp  screen.hpp  sensors.cpp  sensors.hpp  sequencer.cpp  sequencer.hpp  views.hpp
examples/midi_music_box/braids/: braids_main.cc  braids_main.h  macro_oscillator.h  random.cc  settings.h  signature_waveshaper.h  svf.h
libraries/: aic3105_reg_def.h  duplex_i2s.pio  midi_utils.c  midi_utils.h  noise_nugget.c  noise_nugget.cmake  noise_nugget.h  noise_nugget_memmap.ld  pgb1.c  pgb1.h
libraries/fixdsp/: CMakeLists.txt  fixdsp-filter-svf.cpp  fixdsp-oscillator-phase_distortion.cpp  fixdsp-oscillator-waveform.cpp  fixdsp-resources-11025.cpp  fixdsp-resources-16000.cpp  fixdsp-resources-22050.cpp  fixdsp-resources-32000.cpp  fixdsp.cpp  (+5 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  pages_1.js  (+7 more)
(+66 files in other folders)
